<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:paddingBottom="1dp"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:text="@string/subsDisc"
                android:textSize="18sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/btn1month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:padding="10dp"
                    android:text="@string/subsNow"
                    android:textAllCaps="false"
                    android:textColor="@color/signInColor"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txt1month"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:paddingBottom="10dp"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/sub1month"
                    android:textSize="17sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/btn6month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:padding="10dp"
                    android:text="@string/subsNow"
                    android:textAllCaps="false"
                    android:textColor="@color/signInColor"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txt6month"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:paddingBottom="10dp"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/sub6month"
                    android:textSize="17sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/btn12month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:padding="10dp"
                    android:text="@string/subsNow"
                    android:textAllCaps="false"
                    android:textColor="@color/signInColor"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txt12month"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:paddingBottom="10dp"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/sub12month"
                    android:textSize="17sp" />


            </LinearLayout>


            <TextView
                android:id="@+id/txtSubscriptionDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:paddingBottom="1dp"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"
                android:visibility="gone"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:paddingBottom="1dp"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:paddingTop="15dp"
                android:text="ملاحظة: في حالة شرائك اشتراك من قبل وقمت بحذف التطبيق او تغيير النظام او تغيير الهاتف اضغط على استعادة الشراء حتى يتم استدعاء اشتراكك السابق"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnGetPayment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="10dp"
                android:text="استعادة الشراء"
                android:textAllCaps="false"
                android:textColor="@color/signInColor"
                android:textSize="15sp" />


        </LinearLayout>
    </ScrollView>


</RelativeLayout>
